<resources>
    <string name="app_name">KNOOPS&amp;M</string>
    <string name="fst_room">Зал 1</string>
    <string name="snd_room">Зал 2</string>
    <string name="reg_txt">Register</string>
    <string name="login_txt">Login</string>
    <string name="current_date">%s</string>
    <string name="start_time">%s</string>
    <string name="end_time">%s</string>
    <string name="start"><font fgcolor="@color/white" size = "15">c</font></string>
    <string name="end"><font fgcolor="@color/white" size = "15">до</font></string>
    <string name="description"><font size = "15"> Введите описание</font></string>
    <string name="enter_group"><font size = "15">Введите название</font></string>
    <string name="enter_dancer"><font size = "15">Добавить участника</font></string>
    <string name="add_event"><font fgcolor="@color/white" size = "15">Добавить занятие</font></string>
    <string name="add_group"><font fgcolor="@color/white" size = "15">Создать новую группу</font></string>
    <string name="add_group_to_btn"><font fgcolor="@color/white" size = "15">Создать новую группу</font></string>
    <string name="add_member"><font fgcolor="@color/white" size = "15">Добавить участников</font></string>
    <string name="del_event"><font size = "15">Удалить занятие</font></string>
    <string name="will_be">Буду</string>
    <string name="wont_be">Не буду</string>
    <string name="dayDay">dayDay</string>
    <string name="dayDate">dayDate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_enter">Enter</string>
    <string name="prompt_fullname">Full name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_code">Trainer code</string>
    <string name="prompt_trainer_code">Trainer Code</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register"><font fgcolor="@color/white" size = "20">SIGN UP</font></string>
    <string name="login"><font fgcolor="@color/white" size = "20">LOGIN</font></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_data_error_msg">"Пожалуйста, укажите все необходимые данные."</string>
    <string name="register_success_msg">"Успешная регистрация!"</string>
    <string name="register_error_msg">"Ошибка регистрации."</string>
    <string name="login_error_msg">"Ошибка входа."</string>
    <string name="incorrect_phone_msg">"Введён некорректный номер телефона."</string>
    <string name="add_training_success_msg">"Тренировка добавлена успешно!"</string>
    <string name="add_training_error_msg">"Ошибка при добавлении тренировки."</string>
</resources>