<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/background">
    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/dialog_background"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/reg_or_log">
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            android:id="@+id/loginSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/login_txt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <View
                android:layout_width="175dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/selected_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:text="@string/reg_txt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <View
                android:layout_width="175dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/line"
                android:baselineAligned="false" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
    </LinearLayout>
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/prompt_phone"
        android:hint="@string/prompt_phone"
        android:selectAllOnFocus="true"
        android:inputType="phone"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_fields"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:background="@drawable/spinner_background"
        tools:ignore="NotSibling" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,NotSibling"
        android:layout_marginTop="50dp"
        android:id="@+id/other_fields"
        app:layout_constraintTop_toBottomOf="@+id/reg_or_log">

        <EditText
            android:id="@+id/editTextFullname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:autofillHints="@string/prompt_fullname"
            android:background="@drawable/spinner_background"
            android:hint="@string/prompt_fullname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_or_log"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFullname"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/prompt_code"
            android:hint="@string/prompt_code"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registerButton"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:background="@drawable/button_background_states"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:visibility="gone"/>

    <Button
        android:id="@+id/loginButton"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:background="@drawable/button_background_states"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>