<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/eventGroupTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DescriptionText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/eventStartTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:minHeight="50dp"
                    android:background="@drawable/spinner_background"
                    style="@style/DescriptionText"/>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/eventEndTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:minHeight="50dp"
                    android:background="@drawable/spinner_background"
                    style="@style/DescriptionText"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/eventDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DescriptionText"/>

        <Button
            android:id="@+id/del_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_event"
            android:background="@drawable/add_event_background"
            android:textAllCaps="false"/>

    </LinearLayout>
</LinearLayout>