<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanelActivity">

    <LinearLayout
        android:id="@+id/main_layout_admin_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/add_everything_block"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/enter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:hint="@string/enter_group"
                android:textSize="15dp"
                android:textColorHint="@color/gray"
                android:background="@drawable/spinner_background"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/DescriptionText"
                android:visibility="gone"/>

            <AutoCompleteTextView
                android:id="@+id/enter_dancer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:hint="@string/enter_dancer"
                android:textSize="15dp"
                android:textColorHint="@color/gray"
                android:background="@drawable/spinner_background"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/DescriptionText"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/entered_dancers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/purple_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:background="@drawable/button_background_states">
                <Button
                    android:id="@+id/add_member_to_group_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/add_member"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/plus_new_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/plus_icon"
                    android:drawablePadding="8dp"
                    android:padding="10dp"
                    android:text="@string/add_group_to_btn"
                    android:textAllCaps="false"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/groups_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport = "false" >

            <LinearLayout
                android:id="@+id/groups_scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigation_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:labelVisibilityMode="unlabeled"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>